--- a/projects/main page/style.css
+++ b/projects/main page/style.css
@@ -167,7 +167,7 @@ a.nav-link {
 }
 
 #contact {
-  background-image: linear-gradient(45deg, rgba(0, 0, 0, 0.4509803922), transparent), url(assets/Rectangle\ 41.png);
+  background-image: linear-gradient(45deg, rgba(0, 0, 0, 0), transparent), url(assets/Rectangle\ 41.png);
   background-color: #3A3A3A;
   padding: 7em 5vw !important;
   margin: 0 !important;
