--- a/projects/project 2/style.css
+++ b/projects/project 2/style.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;500;600;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Heebo:wght@400;500;600;700;800&display=swap');
 
 body {
     direction: rtl;
@@ -8,7 +8,7 @@ body {
 
 .background-div {
     height:50vh;
-    background-image: url(../assets/Path\ 15.png); 
+    background-image: url(assets/Path\ 15.png); 
     background-position: top;
     background-repeat: no-repeat;
     background-size: cover;
@@ -16,6 +16,7 @@ body {
 
 
 form {
+    font-family: 'Heebo', sans-serif;
     display: inline-block;
     background-color: rgba(20, 20, 20, 0.7);
     color: white;
@@ -44,7 +45,7 @@ h1 {
 .field>label {
     display: block;
     margin-bottom: 2px;
-    font-size: small;
+    font-size: smaller;
     text-align: justify;
     padding-right: 30px;
     font-weight: bold;
@@ -54,7 +55,7 @@ input {
     border: 1px solid #d31c75;
     margin-bottom: 8px; 
     height: 40px;
-    width: 85%;
+    width: 80%;
 }
 button {
     background-color: #d31c75;
@@ -69,15 +70,16 @@ button {
     margin-right: 30px;
 }
 
-/* @media (max-width: 480px) { 
+@media (max-width: 760px) {
     .background-div {
-        background-image: url(../assets/Path\ 15@2x.png.png)
+        width: 100vh; 
+    }
+
+    form {
+       max-width: 85%;
+    }
+
+    h1 {
+       font-size: 25px; 
     }
 }
-
-@media (min-width: 1025px) {
-    .background-div {
-	    background-image: url(../assets/Path\ 15.png);
-   }
-}
-*/
