--- a/projects/project 4/style.css
+++ b/projects/project 4/style.css
@@ -6,12 +6,13 @@ body {
     direction: rtl;
     background-color: #E5EEFF;
     font-family: "Assistant", sans-serif;
-    padding: 250px 500px 250px;
+    padding: 20px 10px;
+    text-align: center;
 }
 
 .container {
-    display: grid;
-    width: 1200px;
+    display: inline-grid;
+    max-width: 100%;
     margin: 0 auto;
     grid-template-columns: repeat(4, 240px);
     grid-template-rows: repeat(6, 240px);
@@ -51,8 +52,6 @@ body {
     flex-direction: column;
 }
 
-
-
 .container>div:last-child {
     grid-column: 3 / span 2;
     grid-row: 4 / span 3;
@@ -62,11 +61,23 @@ body {
     align-items: center;
     justify-content: center;
     flex-direction: column;
-
 }
 
-form-container {
-    width: 250px;
+@media (max-width: 760px) {
+  .container {
+    grid-template-columns: repeat(2, 250px);
+    grid-template-rows: repeat(12, 250px);
+  }
+
+  .container > div:first-child {
+    grid-column: 1 / span 2;
+    grid-row: 1 / span 2;
+  }
+
+  .container > div:last-child {
+    grid-column: 1 / span 2;
+    grid-row: 10 / span 3;
+  }
 }
 
 .form-container h1,
