--- a/Portfolio - Maya Shteinberg/main page/style.css
+++ b/Portfolio - Maya Shteinberg/main page/style.css
@@ -21,17 +21,20 @@ nav {
   z-index: 1;
 }
 
+.myIcon {
+  border-radius: 35px;
+  width: 60px;
+}
+
 .logo {
   font-family: "Satisfy", cursive;
 }
-
 .logo span {
   margin-left: 8px;
   font-size: 25px;
   position: relative;
   top: 8px;
 }
-
 .logo .icon {
   height: 60px;
   border-radius: 45px;
@@ -39,12 +42,17 @@ nav {
 
 li.nav-item {
   margin: 0 12px;
+  white-space: nowrap;
 }
 
 a.nav-link {
   font-size: 20px;
   font-weight: 600;
   color: #2C2C2C !important;
+}
+
+.nav-link:hover {
+  color: #1AE0EC !important;
 }
 
 .main {
@@ -54,7 +62,6 @@ a.nav-link {
   padding: 12vw 6vw !important;
   margin: 0 !important;
 }
-
 .main h1 {
   font-size: 80px;
   font-weight: bold;
@@ -66,12 +73,10 @@ a.nav-link {
   direction: ltr;
   padding: 8px;
 }
-
 .icons img {
   height: 80px;
   transition: 0.3s;
 }
-
 .icons img:hover {
   scale: 1.1;
 }
@@ -87,79 +92,70 @@ a.nav-link {
   padding-top: 90px !important;
   padding-bottom: 90px !important;
 }
-
 #about img {
   width: 150px;
   border-radius: 50%;
 }
-
 #about h2 {
   margin: 30px;
   font-weight: bold;
 }
-
 #about button {
   margin-top: 20px;
   font-size: 1.4em;
   border-radius: 30px;
   padding: 6px 32px;
 }
+#about a {
+  text-decoration: none;
+  color: black;
+}
 
 #gallery {
   padding: 100px 0;
   background-color: #f3f3f3;
 }
-
 #gallery h2 {
   text-align: center;
   font-weight: bold;
 }
-
 #gallery .row {
   max-width: 1100px;
   padding: 16px;
   margin: auto;
 }
-
 #gallery .row > div {
   padding: 16px;
 }
-
 #gallery .row .card {
   border-radius: 10px;
   overflow: hidden;
   text-align: center;
   transition: 0.6s;
+  height: 400px;
 }
-
 #gallery .row .card img {
   transition: 0.6s;
 }
-
-#gallery .row .card:hover {
+#gallery .row .card :hover {
   box-shadow: 0 0 8px rgba(0, 0, 0, 0.337254902);
 }
-
-#gallery .row .card:hover img {
+#gallery .row .card :hover img {
   scale: 1.1;
   translate: 0 -5px;
   filter: brightness(80%);
 }
-
 #gallery .row .card .card-body {
   padding: 2rem 1rem;
 }
-
 #gallery .row .card .card-body h4 {
   font-size: 25px;
   font-weight: bold;
 }
-
 #gallery .row .card .card-body p {
   margin-top: 20px;
   font-size: 15px;
 }
-
 #gallery .row .card .card-body a {
   margin-top: 20px;
   border-radius: 30px;
@@ -167,7 +163,7 @@ a.nav-link {
 }
 
 #contact {
-  background-image: linear-gradient(45deg, rgba(0, 0, 0, 0.4509803922), transparent), url(assets/Rectangle\ 41.png);
+  background-image: linear-gradient(45deg, rgba(0, 0, 0, 0), transparent), url(assets/Rectangle\ 41.png);
   background-color: #3A3A3A;
   padding: 7em 5vw !important;
   margin: 0 !important;
@@ -176,17 +172,14 @@ a.nav-link {
   background-repeat: no-repeat;
   background-position: revert;
 }
-
 #contact form {
   margin: 32px 0;
 }
-
 #contact .form-control {
   border-bottom: 3px solid #31d2f2;
   border-radius: 0;
   margin-bottom: 16px;
 }
-
 #contact button {
   margin-top: 32px;
   font-size: 1.4em;
@@ -201,13 +194,11 @@ a.nav-link {
   direction: ltr;
   margin: 0;
 }
-
 #links img {
   height: 40px;
   display: block;
   margin: auto;
 }
-
 #links span {
   margin: 8px 0;
   display: inline-block;
