--- a/Portfolio - Maya Shteinberg/projects/project 1/style.css
+++ b/Portfolio - Maya Shteinberg/projects/project 1/style.css
@@ -73,6 +73,48 @@ Button {
     font-size: 20px;
 }
 
-@media (max-width: 760px) {
+@media (max-width: 789px) {
+
+    body {
+        background-repeat: no-repeat;
+    }
+
+    h1 {
+      font-size: 5em;
+    }
   
-}
+    h2 {
+    font-size: 27px;
+    padding-bottom: 12px;
+    }
+  
+    p {
+      width: 350px;
+      margin: auto;
+      font-size: 16px;
+    }
+
+    .myDiv {
+        display: flex;
+        flex-direction: column;
+    }
+  
+    .container {
+      width: 80%;
+      display: flex;
+      flex-direction: column;
+      margin-right: 12px;
+    }
+
+    input {
+      padding: 10px 50px;
+      width: 80%;
+    }
+    
+    button {
+      padding: 10px 30px;
+      width: 80%;
+      margin: -25px 50px;
+    }
+  }
+  
