--- a/Portfolio - Maya Shteinberg/projects/project-pages/project-page 4/style.css
+++ b/Portfolio - Maya Shteinberg/projects/project-pages/project-page 4/style.css
@@ -23,8 +23,8 @@ nav {
   z-index: 1;
 }
 
-.navbar-nav:hover {
-  display: block;
+.nav-item {
+  white-space: nowrap;
 }
 
 .myIcon {
@@ -45,7 +45,7 @@ nav {
 
 .logo .icon {
   height: 60px;
-  border-radius: 8px;
+  border-radius: 45px;
 }
 
 li.nav-item {
