--- a/Portfolio - Maya Shteinberg/projects/project 2/style.css
+++ b/Portfolio - Maya Shteinberg/projects/project 2/style.css
@@ -1,9 +1,20 @@
 @import url('https://fonts.googleapis.com/css2?family=Heebo:wght@300;400;500;600;700;800&display=swap');
 
+@keyframes fadeIn {
+    0% {
+      opacity: 0;
+    }
+  
+    100% {
+      opacity: 1;
+    }
+}
+
 body {
     direction: rtl;
     font-family: 'Open Sans', sans-serif;
-    min-height: 100vh
+    min-height: 100vh;
+    animation: fadeIn 1s ease-in-out 1;
 }
 
 .background-div {
@@ -61,6 +72,7 @@ input {
     height: 40px;
     width: 80%;
 }
+
 button {
     background-color: #d31c75;
     color: white;
@@ -102,5 +114,10 @@ button {
     .field>input {
         height: 54px;
         width: 100%;
+    }
+
+    button {
+        display: inline-block;
+        margin-right: 0px;
     }
 }
