--- a/Portfolio - Maya Shteinberg/projects/project 3/style.css
+++ b/Portfolio - Maya Shteinberg/projects/project 3/style.css
@@ -1,9 +1,20 @@
 @import url('https://fonts.googleapis.com/css2?family=Heebo:wght@100;200;300;400;500;600;700;800;900&display=swap');
 
+@keyframes fadeIn {
+    0% {
+      opacity: 0;
+    }
+  
+    100% {
+      opacity: 1;
+    }
+}
+
 body {
     direction: rtl;
     font-family: 'Heebo', sans-serif;
     color: #020253;
+    animation: fadeIn 1s ease-in-out 1;
 }
 
 .row {
