--- a/Portfolio - Maya Shteinberg/projects/project 1/style.css
+++ b/Portfolio - Maya Shteinberg/projects/project 1/style.css
@@ -12,27 +12,27 @@
     }
 }
 
-html {
-    height: 100%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+body {
+  animation: fadeIn 1s ease-in-out 1;
+  background-image: linear-gradient(180deg, #281EFF 0%, #2DFF8C 100%);
+  font-family: 'Open Sans', sans-serif;
+  direction: rtl;
+  text-align: center;
+  color: white;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  height: 1000px;
 }
 
-body {
-    background-image: linear-gradient(180deg, #281EFF 0%, #2DFF8C 100%);
-    font-family: 'Open Sans', sans-serif;
-    direction: rtl;
-    text-align: center;
-    color: white;
-    animation: fadeIn 1s ease-in-out 1;
+.frame {
+  margin: 20px;
 }
 
 h1 {
     font-family: 'Satisfy', cursive;
     font-size: 10em;
     text-shadow: 0 0 10px #00000049;
-    margin: 0;
     font-weight: 200;
 }
 
@@ -53,8 +53,10 @@ p {
     border-color: white;
     font-size: small;
     display: flex;
-    gap: 50px;
+    gap: 20px;
     flex-direction: row;
+    justify-content: center;
+    flex-wrap: wrap;
 }
 
 .container label{
@@ -68,8 +70,9 @@ input{
     box-shadow: 0px 0px 40px #00000066;
     border: 2px solid #ffffff;
     opacity: 1;
-    width: 391px;
+    width: 350px;
     height: 35px;
+
 }
 
 Button {
@@ -79,15 +82,19 @@ Button {
     display: inline-block;
     width: 205px;
     border: none;
-    margin: 18px -25px;
+    margin: 18px -5px;
     height: 49px;
     font-size: 20px;
 }
 
 @media (max-width: 789px) {
 
+    .frame {
+      margin: 20px;
+  }
     body {
         background-repeat: no-repeat;
+        max-width: 100%;
     }
 
     h1 {
@@ -115,6 +122,7 @@ Button {
       display: flex;
       flex-direction: column;
       margin-right: 12px;
+      flex-wrap: wrap;
     }
 
     input {
@@ -128,4 +136,3 @@ Button {
       margin: -25px 50px;
     }
   }
-  
