--- a/Portfolio  Maya Shteinberg/main page/style.css
+++ b/Portfolio  Maya Shteinberg/main page/style.css
@@ -147,6 +147,7 @@ a.nav-link {
 }
 #gallery .row .card .card-body {
   padding: 2rem 1rem;
+  overflow: scroll;
 }
 #gallery .row .card .card-body h4 {
   font-size: 25px;
