--- a/Portfolio  Maya Shteinberg/main page/style.scss
+++ b/Portfolio  Maya Shteinberg/main page/style.scss
@@ -163,6 +163,7 @@ a.nav-link {
       
        .card-body {
         padding: 2rem 1rem;
+        overflow: scroll;
         
         h4 {
           font-size: 25px;
